# firmware

./: .gitignore  Cargo.toml  README.md  xtask.toml
.cargo/: config.toml
orbisat/: Cargo.toml
orbisat/src/: dummy.rs  lib.rs  logger.rs  main.rs  navigation.rs  sensor.rs  signal.rs  store.rs  system.rs  tmtc.rs
xtask/: Cargo.toml
xtask/src/: main.rs
